@@ -1,4 +1,5 @@
 * Fixed crash in taskbar plugin after number of desktops was updated.
+* Fixed incorrect panel geometry initialization.
 
 0.8.1
 -------------------------------------------------------------------------
